Some refactoring on criterions & working on world editor

--- a/Sources/Tools/Giny.WorldEditor/Components/Configuration.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Configuration.razor
@@ -4,6 +4,7 @@
 @using Giny.ORM;
 @using Giny.WorldEditor.Config;
 @using MySql.Data.MySqlClient;
+  
 
 <MudContainer>
     <br />
@@ -226,7 +227,7 @@
     {
         try
         {
-            var result = Http.Get(WorldApiUrl + WorldApi.Stats);
+            var result = Http.Get(WorldApiUrl + WorldApi.StatsPath);
             return true;
         }
         catch (Exception ex)
