--- a/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dungeons.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dungeons.razor
@@ -3,6 +3,7 @@
 @using Giny.IO.D2OClasses;
 @using Giny.World.Records.Maps;
 @using Giny.World.Records.Monsters;
+@using Giny.WorldEditor.Caching;
 @using Giny.WorldEditor.Config;
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components;
@@ -13,7 +14,7 @@
 
 
 <MudGrid>
-    <MudItem xs="2">
+    <MudItem xs="3">
 
         <MudPaper Outlined=true>
             <MudList Dense="true" Clickable="true">
@@ -25,7 +26,7 @@
 
                 <div style="height:70vh;overflow-y:scroll">
                     <Virtualize Items="@DungeonSearchResults">
-                        <MudListItem OnClick="() => SelectDungeon(context)" Text=@context.Name />
+                        <MudListItem OnClick="() => SelectDungeon(context)" Text=@(context.Name + " ("+context.Rooms.Count+")") />
                     </Virtualize>
                 </div>
 
@@ -37,75 +38,78 @@
 
     @if (SelectedDungeon != null)
     {
-        <MudItem xs="10">
+        <MudItem xs="9">
             <MudPaper MinHeight="900px" Class="d-flex flex-column flex-grow-1 gap-4 pa-6" Outlined=false Elevation="3">
 
-                <MudText Class="mb-5" Typo="Typo.h4"><MudIcon Icon="@Icons.Custom.Uncategorized.ChessKnight"></MudIcon> @SelectedDungeon.Name</MudText>
+                <div>
+                    <MudText Typo="Typo.h5"> @SelectedDungeon.Name</MudText>
+                    <MudText Typo="Typo.caption">Level @SelectedDungeon.OptimalPlayerLevel </MudText>
+                </div>
 
-                <MudGrid Class="mb-2">
 
-                    <MudItem xs="12" sm="6" md="4">
-                        <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" ReadOnly=@true Value="@SelectedDungeon.EntranceMapId" Label="Entrée" />
+                <div class="d-flex pa-2 gap-4">
+                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" ReadOnly=@true Value="@SelectedDungeon.EntranceMapId" Label="Entrée" />
+                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" ReadOnly=@true Value="@SelectedDungeon.ExitMapId" Label="Sortie" />
 
-                    </MudItem>
-                    <MudItem xs="12" sm="6" md="4">
-                        <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" ReadOnly=@true Value="@SelectedDungeon.ExitMapId" Label="Sortie" />
-                    </MudItem>
-                </MudGrid>
+                </div>
 
-                <MudTabs AlwaysShowScrollButtons="false" Color="Color.Surface" @bind-ActivePanelIndex="@RoomIndex" Elevation="0" Outlined=true Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
+
+                <MudTabs AlwaysShowScrollButtons="false" Color="Color.Surface" @bind-ActivePanelIndex="@RoomIndex" Elevation="0" Outlined=true Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-4">
 
 
                     @foreach (var room in SelectedDungeon.Rooms)
                     {
-                        <MudTabPanel Text="@("Salle "+(SelectedDungeon.Rooms.Keys.ToList().IndexOf(room.Key)+1).ToString())">
+                        <MudTabPanel Text="@("Room "+(SelectedDungeon.Rooms.Keys.ToList().IndexOf(room.Key)+1).ToString())">
 
 
-                            <MudGrid Class="mb-2">
-                                <MudItem xs="12" sm="6" md="4">
-                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.DriveFileRenameOutline" ReadOnly=@true Value="@MapPositionRecord.GetMapName(CurrentRoom.Key)" Label="Nom" />
-                                </MudItem>
 
-                                <MudItem xs="12" sm="6" md="4">
-                                    <MudButton Class="mt-3" StartIcon="@Icons.Material.Filled.Delete" Variant="Variant.Text" Color="Color.Error">Supprimer la salle</MudButton>
-                                </MudItem>
 
-                            </MudGrid>
+                            @if (RoomIndex >= 0)
+                            {
+                                <div class="d-flex pa-2">
+                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.DriveFileRenameOutline" ReadOnly=@true Value="@MapPositionRecord.GetMapName(CurrentRoom.Key)" Label="Name" />
 
-                            <MudGrid Class="mb-2">
-
-                                <MudItem xs="12" sm="6" md="4">
+                                </div>
+                                <div class="d-flex gap-4 pa-2">
                                     <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" ReadOnly=@true Value="@CurrentRoom.Key" Label="MapId" />
-                                </MudItem>
-                                <MudItem xs="12" sm="6" md="4">
-                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Timer" @bind-Value="@CurrentRoom.Value.RespawnDelay" Label="Delay de respawn" />
-                                </MudItem>
+                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Timer" @bind-Value="@CurrentRoom.Value.RespawnDelay" Label="Respawn delay" />
 
-                            </MudGrid>
+                                </div>
 
-
-
-                            <MudPaper Class="pa-2" Elevation="0" Outlined=true>
-
-
-
-                                @if (room.Value.MonsterIds.Count == 0)
+                                @if (CurrentRoom.Value.MonsterIds.Count > 0)
                                 {
-                                    <MudChip Variant="Variant.Text" Color="Color.Primary" Text="Aucune données"></MudChip>
+
+                                    <MudDataGrid Class="mt-3" Dense=true Hover=true Striped=false Bordered=true Items="room.Value.MonsterIds">
+                                        <Columns>
+
+                                            <PropertyColumn Title="Id" Property="x => x.ToString()" />
+
+                                            <TemplateColumn Title="Icon">
+                                                <CellTemplate>
+                                                    <MudImage Src="@(GetMonsterIcon(context.Item))" />
+                                                </CellTemplate>
+                                            </TemplateColumn>
+
+
+                                            <PropertyColumn Property="x => MonsterRecord.GetMonsterRecord(x).Name" />
+
+                                            <TemplateColumn Title="Actions">
+                                                <CellTemplate>
+                                                    <MudStack Row>
+                                                    <MudButton Size="@Size.Small" StartIcon="@Icons.Material.Filled.Delete" IconColor="Color.Primary" Variant="@Variant.Text" Color="@Color.Primary">Delete</MudButton>
+                                                </MudStack>
+                                            </CellTemplate>
+                                        </TemplateColumn>
+
+                                    </Columns>
+                                </MudDataGrid>
+                                }
+                                else
+                                {
+                                    <MudChip Class="mt-2" Color="Color.Primary" Variant="Variant.Text">No monsters in this room</MudChip>
                                 }
 
-                                <MudChipSet AllClosable="true" OnClose="Closed">
-                                    @foreach (var value in room.Value.MonsterIds)
-                                    {
-                                        <MudChip Value="@MonsterRecord.GetMonsterRecord(value)" Variant="Variant.Text" Color="Color.Primary" Text="@MonsterRecord.GetMonsterRecord(value).Name"></MudChip>
-                                    }
-
-
-
-                                </MudChipSet>
-
-                            </MudPaper>
-
+                                                    }
 
 
                         </MudTabPanel>
@@ -198,6 +202,11 @@
         this.SearchResults = MonsterRecord.GetMonsterRecords().Where(x => x.Name.ToLower().Contains(MonsterSearch.ToLower())).ToList();
     }
 
+    string GetMonsterIcon(short monsterId)
+    {
+        var source = string.Format("data:image/png;base64,{0}", ExternalResources.GetMonsterIcon(monsterId));
+        return source;
+    }
     void AddMonster()
     {
 
@@ -237,6 +246,7 @@
     private void SelectDungeon(DungeonRecord dungeon)
     {
         this.SelectedDungeon = dungeon;
+        RoomIndex = 0;
     }
     private void OnSearchTextChanged()
     {
